{
  "version": 4,
  "terraform_version": "0.12.16",
  "serial": 1051,
  "lineage": "2dd0c9d6-19b9-c415-27a8-b3238213345b",
  "resources": [
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "az_a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:430092742116:subnet/subnet-294e9e64",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.31.16.0/20",
            "default_for_az": true,
            "id": "subnet-294e9e64",
            "map_public_ip_on_launch": true,
            "owner_id": "430092742116",
            "state": "available",
            "vpc_id": "vpc-29722e53"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "az_b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:430092742116:subnet/subnet-b5b1bce9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.31.32.0/20",
            "default_for_az": true,
            "id": "subnet-b5b1bce9",
            "map_public_ip_on_launch": true,
            "owner_id": "430092742116",
            "state": "available",
            "vpc_id": "vpc-29722e53"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "az_c",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:430092742116:subnet/subnet-ffc0c098",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.31.0.0/20",
            "default_for_az": true,
            "id": "subnet-ffc0c098",
            "map_public_ip_on_launch": true,
            "owner_id": "430092742116",
            "state": "available",
            "vpc_id": "vpc-29722e53"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:430092742116:vpc/vpc-29722e53",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-16bf386b",
            "default_route_table_id": "rtb-95f72ceb",
            "default_security_group_id": "sg-f6d177a3",
            "dhcp_options_id": "dopt-44867f3e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-29722e53",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-95f72ceb",
            "owner_id": "430092742116"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "control_plane",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07ebfd5b3428b6f4d",
            "arn": "arn:aws:ec2:us-east-1:430092742116:instance/i-0bdd1b4e2e09637c5",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "iam_instance_profile": "udagram-host",
            "id": "i-0bdd1b4e2e09637c5",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "udagram-deployer-key",
            "monitoring": false,
            "primary_network_interface_id": "eni-09e84e431cd28b162",
            "private_dns": "ip-172-31-18-151.ec2.internal",
            "private_ip": "172.31.18.151",
            "public_dns": "ec2-18-207-149-187.compute-1.amazonaws.com",
            "public_ip": "18.207.149.187",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 150,
                "volume_id": "vol-0eff2b0790bddffd9",
                "volume_size": 50,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "udagram-common",
              "udagram-control_planes"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-294e9e64",
            "tags": {
              "Name": "udagram-control_plane-1",
              "kubernetes.io/cluster/udagram": "shared"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-096ebe6a484a17805",
              "sg-0b18b8ca29a1d21d0"
            ]
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_iam_instance_profile.profile",
            "aws_iam_role.role",
            "aws_key_pair.deployer",
            "aws_security_group.common",
            "aws_security_group.control_plane"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07ebfd5b3428b6f4d",
            "arn": "arn:aws:ec2:us-east-1:430092742116:instance/i-06b0e6f489b8c6308",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "iam_instance_profile": "udagram-host",
            "id": "i-06b0e6f489b8c6308",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "udagram-deployer-key",
            "monitoring": false,
            "primary_network_interface_id": "eni-0f219ff6d9c2583d6",
            "private_dns": "ip-172-31-40-42.ec2.internal",
            "private_ip": "172.31.40.42",
            "public_dns": "ec2-54-166-249-83.compute-1.amazonaws.com",
            "public_ip": "54.166.249.83",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 150,
                "volume_id": "vol-07300aba831b36dcf",
                "volume_size": 50,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "udagram-common",
              "udagram-control_planes"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-b5b1bce9",
            "tags": {
              "Name": "udagram-control_plane-2",
              "kubernetes.io/cluster/udagram": "shared"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-096ebe6a484a17805",
              "sg-0b18b8ca29a1d21d0"
            ]
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_iam_instance_profile.profile",
            "aws_iam_role.role",
            "aws_key_pair.deployer",
            "aws_security_group.common",
            "aws_security_group.control_plane"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07ebfd5b3428b6f4d",
            "arn": "arn:aws:ec2:us-east-1:430092742116:instance/i-07fbe27a335af104a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "iam_instance_profile": "udagram-host",
            "id": "i-07fbe27a335af104a",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "udagram-deployer-key",
            "monitoring": false,
            "primary_network_interface_id": "eni-00352365c92e6461f",
            "private_dns": "ip-172-31-14-109.ec2.internal",
            "private_ip": "172.31.14.109",
            "public_dns": "ec2-34-234-100-224.compute-1.amazonaws.com",
            "public_ip": "34.234.100.224",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 150,
                "volume_id": "vol-07bb76c9c7b127eef",
                "volume_size": 50,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "udagram-common",
              "udagram-control_planes"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-ffc0c098",
            "tags": {
              "Name": "udagram-control_plane-3",
              "kubernetes.io/cluster/udagram": "shared"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-096ebe6a484a17805",
              "sg-0b18b8ca29a1d21d0"
            ]
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_iam_instance_profile.profile",
            "aws_iam_role.role",
            "aws_key_pair.deployer",
            "aws_security_group.common",
            "aws_security_group.control_plane"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "control_plane",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:430092742116:loadbalancer/net/udagram-api-lb/1891cbe69c2cdee8",
            "arn_suffix": "net/udagram-api-lb/1891cbe69c2cdee8",
            "dns_name": "udagram-api-lb-1891cbe69c2cdee8.elb.us-east-1.amazonaws.com",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:430092742116:loadbalancer/net/udagram-api-lb/1891cbe69c2cdee8",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "udagram-api-lb",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-294e9e64"
              },
              {
                "subnet_id": "subnet-b5b1bce9"
              },
              {
                "subnet_id": "subnet-ffc0c098"
              }
            ],
            "subnets": [
              "subnet-294e9e64",
              "subnet-b5b1bce9",
              "subnet-ffc0c098"
            ],
            "tags": {
              "Cluster": "udagram",
              "kubernetes.io/cluster/udagram": "shared"
            },
            "vpc_id": "vpc-29722e53",
            "zone_id": "Z26RNL4JYFTOTI"
          },
          "dependencies": [
            "aws_default_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "control_plane_api",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:430092742116:listener/net/udagram-api-lb/1891cbe69c2cdee8/dec93cc0bae8543e",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:430092742116:targetgroup/udagram-api/d6d403c5ca4e1ac9",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:430092742116:listener/net/udagram-api-lb/1891cbe69c2cdee8/dec93cc0bae8543e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:430092742116:loadbalancer/net/udagram-api-lb/1891cbe69c2cdee8",
            "port": 6443,
            "protocol": "TCP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_lb.control_plane",
            "aws_lb_target_group.control_plane_api"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "control_plane_api",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:430092742116:targetgroup/udagram-api/d6d403c5ca4e1ac9",
            "arn_suffix": "targetgroup/udagram-api/d6d403c5ca4e1ac9",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:430092742116:targetgroup/udagram-api/d6d403c5ca4e1ac9",
            "lambda_multi_value_headers_enabled": false,
            "name": "udagram-api",
            "port": 6443,
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "target_type": "instance",
            "vpc_id": "vpc-29722e53"
          },
          "dependencies": [
            "aws_default_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "control_plane_api",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:430092742116:targetgroup/udagram-api/d6d403c5ca4e1ac9-20200123074522380800000002",
            "port": 6443,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:430092742116:targetgroup/udagram-api/d6d403c5ca4e1ac9",
            "target_id": "i-0bdd1b4e2e09637c5"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_iam_instance_profile.profile",
            "aws_iam_role.role",
            "aws_instance.control_plane",
            "aws_key_pair.deployer",
            "aws_lb_target_group.control_plane_api",
            "aws_security_group.common",
            "aws_security_group.control_plane"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:430092742116:targetgroup/udagram-api/d6d403c5ca4e1ac9-20200123074522342200000001",
            "port": 6443,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:430092742116:targetgroup/udagram-api/d6d403c5ca4e1ac9",
            "target_id": "i-06b0e6f489b8c6308"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_iam_instance_profile.profile",
            "aws_iam_role.role",
            "aws_instance.control_plane",
            "aws_key_pair.deployer",
            "aws_lb_target_group.control_plane_api",
            "aws_security_group.common",
            "aws_security_group.control_plane"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:430092742116:targetgroup/udagram-api/d6d403c5ca4e1ac9-20200123074522417600000003",
            "port": 6443,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:430092742116:targetgroup/udagram-api/d6d403c5ca4e1ac9",
            "target_id": "i-07fbe27a335af104a"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_iam_instance_profile.profile",
            "aws_iam_role.role",
            "aws_instance.control_plane",
            "aws_key_pair.deployer",
            "aws_lb_target_group.control_plane_api",
            "aws_security_group.common",
            "aws_security_group.control_plane"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "common",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:430092742116:security-group/sg-096ebe6a484a17805",
            "description": "cluster common rules",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-096ebe6a484a17805",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "udagram-common",
            "name_prefix": null,
            "owner_id": "430092742116",
            "revoke_rules_on_delete": false,
            "tags": {
              "kubernetes.io/cluster/udagram": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-29722e53"
          },
          "dependencies": [
            "aws_default_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "control_plane",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:430092742116:security-group/sg-0b18b8ca29a1d21d0",
            "description": "cluster control_planes",
            "egress": [],
            "id": "sg-0b18b8ca29a1d21d0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              }
            ],
            "name": "udagram-control_planes",
            "name_prefix": null,
            "owner_id": "430092742116",
            "revoke_rules_on_delete": false,
            "tags": {
              "kubernetes.io/cluster/udagram": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-29722e53"
          },
          "dependencies": [
            "aws_default_vpc.default"
          ]
        }
      ]
    }
  ]
}